# renderer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  run.sh
lib/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
lib/imgui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer.cpp
src/: AK.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Engine.cpp  Engine.h  Framebuffer.cpp  Framebuffer.h  Light.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Scene.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  UI.cpp  UI.h  Vector.cpp  Vector.h  Vertex.h  Window.cpp  Window.h  color.cpp  color.h  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
